--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Chatwoot",
-  "description": "Chatwoot is a customer support tool for instant messaging channels",
-  "website": "https://www.chatwoot.com/",
+  "name": "Capri Chats",
+  "description": "A place for automated conversation",
+  "website": "https://www.chats.capriai.us/",
   "repository": "https://github.com/chatwoot/chatwoot",
   "logo": "https://app.chatwoot.com/brand-assets/logo_thumbnail.svg",
   "keywords": [
